Updated HTML content

--- a/index.html
+++ b/index.html
@@ -3,16 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI Revolution</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KITSAS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -27,7 +17,7 @@
             </ul>
         </nav>
         <div class="hero">
-            <h1>welcome To K<span style="color: red;">IT</span>SAS</h1>
+            <h1>Welcome To K<span style="color: red;">IT</span>SAS</h1>
             <p>A Professional <span style="color: red;"> Hardware And Software</span> Solutions Company</p>
         </div>
     </header>
