--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     </header>
     <section class="services">
-        <h2>What we offer</h2>
+        <h2>What We Offer</h2>
         <div class="service-cards">
             <div class="service-card">
                 <h3>Computer/Laptop Hardware</h3>
